# carvalue-uae

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: metadata.py  predict.py  router.py
backend/app/models/: prediction_log.py
backend/app/schemas/: prediction.py
backend/app/services/: ml_service.py
backend/tests/: __init__.py  conftest.py  test_api.py
docs/: api-spec.md  architecture.md  brd.md  ci-cd.md  data-spec.md  design-system.md  hooks-plan.md  integrations.md  library-selection.md  llm-cost-model.md  prd.md  research.md  ux-flow.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/PredictionForm/: FormFields.tsx  PredictionForm.tsx  (+1 more)
frontend/src/hooks/: useMakes.ts  useModels.ts  usePrediction.ts  usePriceFormatter.ts  useScrollReveal.ts
frontend/src/pages/: LandingPage.tsx  NotFoundPage.tsx  PredictPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: predictionStore.ts
frontend/src/types/: index.ts
ml/: confidence_lookup.pkl  drift.py  evaluate.py  model.pkl.sha256  predict.py  pyproject.toml  train.py
ml/benchmarks/: baseline.json  eval_fixtures.json
ml/registry/: versions.json
scripts/: docker-up.sh  evaluate-model.sh  run-all.sh  run-backend.sh  run-frontend.sh  run-tests.sh  setup.sh  train-model.sh
(+13 files in other folders)
